2003-11-25 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(viewer::insert_texture):  Check GL_MAX_TEXTURE_SIZE and rescale
	the texture as needed.

2003-11-24 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(viewer::insert_texture):  Accept arbitrarily large textures
	rather than topping out at 256*256.  Textures with sides that
	are not powers of 2 are scaled down to the nearest power of 2.

2003-11-22 Braden McDaniel  <braden@endoframe.com>

	Modified "viewer::insert_texture" to accept an "image".

	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/viewer.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.h

2003-11-21 Braden McDaniel  <braden@endoframe.com>

	Replaced "w", "h", "components", and "pixels" members of
	"texture_node" with an "image" member that returns an
	"openvrml::image".

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2003-11-20 Braden McDaniel  <braden@endoframe.com>

	Modified lookat to use SDL instead of glut.

	* README:  Updated description of dependencies.
	* configure.ac:  Check for SDL instead of glut.
	* openvrml.spec.in:  Require SDL instead of glut.
	* m4/Makefile.am:  Removed "ax_check_glut.m4" from EXTRA_DIST.
	* m4/ax_check_glut.m4:  Removed file.
	* src/lookat/Makefile.am:  Apply SDL flags instead of glut flags.
	* src/lookat/ViewerGlut.cpp:  Removed file.
	* src/lookat/ViewerGlut.h:  Removed file.
	* src/lookat/lookat.cpp:  Use SDL instead of glut.

2003-11-18  Braden McDaniel  <braden@endoframe.com>

	Apply std::hex manipulator when reading hexadecimal integers.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g

2003-11-18  Braden McDaniel  <braden@endoframe.com>

	Removed some debugging output.
